--- a/dashboard/templates/pages/home.html
+++ b/dashboard/templates/pages/home.html
@@ -1,5 +1,218 @@
 <!-- pages/home.html -->
 
 {{define "content"}}
-    <h1>test content</h1>
+    <div class="flex overflow-hidden flex-col flex-grow h-full">
+        <div class="hidden px-10 w-full h-16 border-b lg:flex border-main">
+            <div class="flex h-full text-gray-400">
+                <a href="#" class="inline-flex items-center mr-8 h-full text-white border-b-2 cursor-pointer border-primary text-primary">Collections</a>
+                <a href="#" class="inline-flex items-center mr-8 h-full border-b-2 border-transparent cursor-pointer">Users</a>
+                <a href="#" class="inline-flex items-center h-full border-b-2 border-transparent cursor-pointer">Settings</a>
+            </div>
+            <div class="flex items-center ml-auto space-x-7">
+                <button class="flex items-center">
+                    <span>QDB Admin</span>
+                    <svg viewBox="0 0 24 24" class="flex-shrink-0 ml-1 w-4" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
+                </button>
+            </div>
+        </div>                
+
+        <div class="flex overflow-x-hidden flex-grow">
+            <div class="hidden overflow-y-auto flex-shrink-0 p-5 w-48 h-full border-r xl:w-72 border-main lg:block">
+                <div class="text-xs tracking-wider text-gray-400">COLLECTIONS</div>
+                <div class="relative mt-2">
+                    <input type="text" class="pl-8 w-full h-9 text-sm text-white rounded-md border-none outline-none bg-secondary active:outline-none active:border-none" placeholder="Search" />
+                    <svg viewBox="0 0 24 24" class="absolute left-2 top-1/2 w-4 text-gray-400 transform translate-x-0.5 -translate-y-1/2" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                    </svg>
+                </div>
+                <div class="mt-3 space-y-4" id="collections"> </div>
+            </div>
+            <div class="overflow-y-auto flex-grow bg-gray-900 bg-main" id="placeholder">
+                <div class="flex sticky top-0 flex-col px-4 pt-4 w-full text-white bg-gray-900 border-b sm:px-7 sm:pt-7 border-main">
+                    <div class="flex items-center w-full">
+                        <div class="flex items-center text-3xl text-white"> 
+                            <span id="collection_title">Select a collection to view its records.</span>
+                            <span class="ml-2 text-sm">(Fetched collection in <span id="collection_fetch_time"></span>)</span>
+                        </div>
+                        <div class="hidden justify-end items-center ml-auto sm:flex">
+                            <div class="text-right">
+                                <div class="text-xs text-gray-400">Record Count:</div>
+                                <div class="text-lg text-white" id="record_count"></div>
+                            </div>
+                            <button class="flex justify-center items-center ml-4 w-8 h-8 text-gray-400 rounded-full border border-gray-700 shadow">
+                                <svg viewBox="0 0 24 24" class="w-4" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <circle cx="12" cy="12" r="1"></circle>
+                                    <circle cx="19" cy="12" r="1"></circle>
+                                    <circle cx="5" cy="12" r="1"></circle>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="flex items-center mt-4 space-x-3 sm:mt-7">
+                        <a href="#" class="px-3 pb-1.5 text-white border-b-2 border-primary text-primary">Records</a>
+                        <a href="#" class="px-3 pb-1.5 text-gray-400 border-b-2 border-transparent">Upload</a>
+                        <a href="#" class="px-3 pb-1.5 text-gray-400 border-b-2 border-transparent">Settings</a>
+                    </div>
+                </div>
+                <div class="p-4 sm:p-7">
+                    <div class="flex items-center mb-7 w-full">
+                        <button class="inline-flex items-center py-0 pr-2 pl-2.5 mr-3 h-8 leading-none text-gray-400 text-gray-700 rounded-md border shadow border-main">
+                            <svg viewBox="0 0 24 24" class="mr-2 w-4 text-gray-400" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                <line x1="16" y1="2" x2="16" y2="6"></line>
+                                <line x1="8" y1="2" x2="8" y2="6"></line>
+                                <line x1="3" y1="10" x2="21" y2="10"></line>
+                            </svg> Last 30 days <svg viewBox="0 0 24 24" class="ml-1.5 w-4 text-gray-400" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <polyline points="6 9 12 15 18 9"></polyline>
+                            </svg>
+                        </button>
+                        <button class="inline-flex items-center py-0 pr-2 pl-2.5 h-8 leading-none text-gray-400 text-gray-700 rounded-md border shadow border-main"> Filter by <svg viewBox="0 0 24 24" class="ml-1.5 w-4 text-gray-400" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <polyline points="6 9 12 15 18 9"></polyline>
+                            </svg>
+                        </button>
+                        <div class="hidden items-center ml-auto text-xs text-gray-500 sm:inline-flex">
+                            <span class="mr-3">Page 1 of 1</span>
+                            <button class="inline-flex justify-center items-center py-0 mr-2 w-8 h-8 leading-none text-gray-400 rounded-md border shadow border-main">
+                                <svg class="w-4" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <polyline points="15 18 9 12 15 6"></polyline>
+                                </svg>
+                            </button>
+                            <button class="inline-flex justify-center items-center py-0 w-8 h-8 leading-none text-gray-400 rounded-md border shadow border-main">
+                                <svg class="w-4" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <polyline points="9 18 15 12 9 6"></polyline>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                    <table class="w-full text-left" id="records">
+                        <thead>
+                            <tr class="text-gray-400">
+                                <th class="px-3 pt-0 pb-3 font-normal border-b border-main">Type</th>
+                                <th class="px-3 pt-0 pb-3 font-normal border-b border-main">ID</th>
+                                <th class="px-3 pt-0 pb-3 font-normal border-b border-main">Content</th>
+                                <th class="px-3 pt-0 pb-3 font-normal text-white border-b border-main sm:text-gray-400">Date Added</th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-gray-100"></tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // Function to fetch data from the API endpoint
+        function fetchData(collectionName) {
+            fetch(`/api/v1/docs/${collectionName}`)
+            .then(response => response.json())
+            .then(data => {
+                const recordsTable = document.getElementById('records');
+                const respTime = document.getElementById('collection_fetch_time');
+                const recCount = document.getElementById('record_count');
+                
+                respTime.innerText = data._resp;
+                recCount.innerText = data.documents.length;
+
+                data.documents.forEach(doc => {
+                    const tr = document.createElement('tr');
+                    tr.id = `record-${doc.id}`;
+
+                    const fileTypeTd = document.createElement('td');
+                    fileTypeTd.className = 'px-1 py-2 border-b sm:p-3 border-main';
+                    fileTypeTd.innerHTML = `
+                        <div class="flex items-center">
+                            <svg class="p-1.5 mr-2.5 w-7 h-7 rounded-lg border border-main" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-json-2">
+                                <path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4" />
+                                <path d="M14 2v4a2 2 0 0 0 2 2h4" />
+                                <path d="M4 12a1 1 0 0 0-1 1v1a1 1 0 0 1-1 1 1 1 0 0 1 1 1v1a1 1 0 0 0 1 1" />
+                                <path d="M8 18a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1 1 1 0 0 1-1-1v-1a1 1 0 0 0-1-1" />
+                            </svg>
+                            JSON
+                        </div>
+                    `;
+
+                    const idTd = document.createElement('td');
+                    idTd.className = 'px-1 py-2 border-b sm:p-3 border-main';
+                    idTd.textContent = doc.id;
+
+                    const contentTd = document.createElement('td');
+                    contentTd.className = 'hidden px-1 py-2 border-b sm:p-3 border-main md:table-cell';
+                    contentTd.innerHTML = `<code>${JSON.stringify(doc)}</code>`;
+
+                    const dateAddedTd = document.createElement('td');
+                    dateAddedTd.className = 'px-1 py-2 border-b sm:p-3 border-main';
+                    dateAddedTd.textContent = new Date().toLocaleString();
+
+                    tr.appendChild(fileTypeTd);
+                    tr.appendChild(idTd);
+                    tr.appendChild(contentTd);
+                    tr.appendChild(dateAddedTd);
+
+                    recordsTable.appendChild(tr);
+                });
+            })
+            .catch(error => {
+                console.error('Error fetching data:', error);
+            });
+        }
+
+        // Fetch data from the API endpoint
+        fetch('/api/v1/docs/collections')
+        .then(response => response.json())
+        .then(data => {
+            const collectionsElement = document.getElementById('collections');
+
+            Object.entries(data).forEach(([dbName, count]) => {
+                const anchor = document.createElement('a');
+                anchor.href = `?collection=${dbName}`;
+                anchor.className = 'flex relative flex-col p-3 w-full rounded-md border shadow-lg outline-none focus:outline-none focus:border-none card card-border'
+    
+                const button = document.createElement('button');
+    
+                const div1 = document.createElement('div');
+                div1.className = 'flex flex-col items-center pb-2 mb-2 w-full text-white font-sm xl:flex-row';
+                div1.textContent = dbName;
+    
+                const div2 = document.createElement('div');
+                div2.className = 'flex items-center w-full';
+    
+                const fileTypePill = document.createElement('div');
+                fileTypePill.className = 'px-2 py-1 text-xs leading-none rounded-md border pill border-primary';
+                fileTypePill.textContent = 'QDB';
+    
+                const recordCountText = document.createElement('div');
+                recordCountText.className = 'ml-auto text-xs text-gray-500';
+                recordCountText.textContent = `${count} Records`;
+    
+                div2.appendChild(fileTypePill);
+                div2.appendChild(recordCountText);
+    
+                button.appendChild(div1);
+                button.appendChild(div2);
+    
+                anchor.appendChild(button);
+    
+                collectionsElement.appendChild(anchor);
+            });
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+        });
+
+        // Check for query parameter 'collection'
+        const urlParams = new URLSearchParams(window.location.search);
+        const collectionName = urlParams.get('collection');
+        if (collectionName) {
+            const collectionsTitle      = document.getElementById('collection_title');
+            collectionsTitle.innerText  = collectionName;
+            fetchData(collectionName);
+        } else {
+            const placeholder = document.getElementById('placeholder');
+            placeholder.innerHTML = '';
+        }
+    </script>    
 {{end}}
+
