update dashboard, db, and api to add search

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>QuadDB - {{.title}}</title>
-        <link rel="stylesheet" href="/assets/main.css">
+        <link rel="stylesheet" href="/assets/css/main.css">
+        <script src="/assets/js/dashboard.js"></script>
     </head>
     <body>
         <div class="flex overflow-hidden h-screen text-sm text-white bg-main">
