--- a/dashboard/templates/pages/home.html
+++ b/dashboard/templates/pages/home.html
@@ -16,7 +16,7 @@
                     </svg>
                 </button>
             </div>
-        </div>                
+        </div>
 
         <div class="flex overflow-x-hidden flex-grow">
             <div class="hidden overflow-y-auto flex-shrink-0 p-5 w-48 h-full border-r xl:w-72 border-main lg:block">
@@ -35,12 +35,12 @@
                     <div class="flex items-center w-full">
                         <div class="flex items-center text-3xl text-white"> 
                             <span id="collection_title">Select a collection to view its records.</span>
-                            <span class="ml-2 text-sm">(Fetched collection in <span id="collection_fetch_time"></span>)</span>
+                            <span class="ml-2 text-sm">(Fetched collection in <span id="collection_fetch_time">0ms</span>)</span>
                         </div>
                         <div class="hidden justify-end items-center ml-auto sm:flex">
                             <div class="text-right">
                                 <div class="text-xs text-gray-400">Record Count:</div>
-                                <div class="text-lg text-white" id="record_count"></div>
+                                <div class="text-lg text-white" id="record_count">0</div>
                             </div>
                             <button class="flex justify-center items-center ml-4 w-8 h-8 text-gray-400 rounded-full border border-gray-700 shadow">
                                 <svg viewBox="0 0 24 24" class="w-4" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -74,7 +74,7 @@
                             </svg>
                         </button>
                         <div class="hidden items-center ml-auto text-xs text-gray-500 sm:inline-flex">
-                            <span class="mr-3">Page 1 of 1</span>
+                            <span class="mr-3">Page 1 of <span id="page_count"></span></span>
                             <button class="inline-flex justify-center items-center py-0 mr-2 w-8 h-8 leading-none text-gray-400 rounded-md border shadow border-main">
                                 <svg class="w-4" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                     <polyline points="15 18 9 12 15 6"></polyline>
@@ -96,123 +96,11 @@
                                 <th class="px-3 pt-0 pb-3 font-normal text-white border-b border-main sm:text-gray-400">Date Added</th>
                             </tr>
                         </thead>
-                        <tbody class="text-gray-100"></tbody>
+                        <tbody class="text-gray-100" id="table-body"></tbody>
                     </table>
                 </div>
             </div>
         </div>
     </div>
-
-    <script>
-        // Function to fetch data from the API endpoint
-        function fetchData(collectionName) {
-            fetch(`/api/v1/docs/${collectionName}`)
-            .then(response => response.json())
-            .then(data => {
-                const recordsTable = document.getElementById('records');
-                const respTime = document.getElementById('collection_fetch_time');
-                const recCount = document.getElementById('record_count');
-                
-                respTime.innerText = data._resp;
-                recCount.innerText = data.documents.length;
-
-                data.documents.forEach(doc => {
-                    const tr = document.createElement('tr');
-                    tr.id = `record-${doc.id}`;
-
-                    const fileTypeTd = document.createElement('td');
-                    fileTypeTd.className = 'px-1 py-2 border-b sm:p-3 border-main';
-                    fileTypeTd.innerHTML = `
-                        <div class="flex items-center">
-                            <svg class="p-1.5 mr-2.5 w-7 h-7 rounded-lg border border-main" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-json-2">
-                                <path d="M4 22h14a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v4" />
-                                <path d="M14 2v4a2 2 0 0 0 2 2h4" />
-                                <path d="M4 12a1 1 0 0 0-1 1v1a1 1 0 0 1-1 1 1 1 0 0 1 1 1v1a1 1 0 0 0 1 1" />
-                                <path d="M8 18a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1 1 1 0 0 1-1-1v-1a1 1 0 0 0-1-1" />
-                            </svg>
-                            JSON
-                        </div>
-                    `;
-
-                    const idTd = document.createElement('td');
-                    idTd.className = 'px-1 py-2 border-b sm:p-3 border-main';
-                    idTd.textContent = doc.id;
-
-                    const contentTd = document.createElement('td');
-                    contentTd.className = 'hidden px-1 py-2 border-b sm:p-3 border-main md:table-cell';
-                    contentTd.innerHTML = `<code>${JSON.stringify(doc)}</code>`;
-
-                    const dateAddedTd = document.createElement('td');
-                    dateAddedTd.className = 'px-1 py-2 border-b sm:p-3 border-main';
-                    dateAddedTd.textContent = new Date().toLocaleString();
-
-                    tr.appendChild(fileTypeTd);
-                    tr.appendChild(idTd);
-                    tr.appendChild(contentTd);
-                    tr.appendChild(dateAddedTd);
-
-                    recordsTable.appendChild(tr);
-                });
-            })
-            .catch(error => {
-                console.error('Error fetching data:', error);
-            });
-        }
-
-        // Fetch data from the API endpoint
-        fetch('/api/v1/docs/collections')
-        .then(response => response.json())
-        .then(data => {
-            const collectionsElement = document.getElementById('collections');
-
-            Object.entries(data).forEach(([dbName, count]) => {
-                const anchor = document.createElement('a');
-                anchor.href = `?collection=${dbName}`;
-                anchor.className = 'flex relative flex-col p-3 w-full rounded-md border shadow-lg outline-none focus:outline-none focus:border-none card card-border'
-    
-                const button = document.createElement('button');
-    
-                const div1 = document.createElement('div');
-                div1.className = 'flex flex-col items-center pb-2 mb-2 w-full text-white font-sm xl:flex-row';
-                div1.textContent = dbName;
-    
-                const div2 = document.createElement('div');
-                div2.className = 'flex items-center w-full';
-    
-                const fileTypePill = document.createElement('div');
-                fileTypePill.className = 'px-2 py-1 text-xs leading-none rounded-md border pill border-primary';
-                fileTypePill.textContent = 'QDB';
-    
-                const recordCountText = document.createElement('div');
-                recordCountText.className = 'ml-auto text-xs text-gray-500';
-                recordCountText.textContent = `${count} Records`;
-    
-                div2.appendChild(fileTypePill);
-                div2.appendChild(recordCountText);
-    
-                button.appendChild(div1);
-                button.appendChild(div2);
-    
-                anchor.appendChild(button);
-    
-                collectionsElement.appendChild(anchor);
-            });
-        })
-        .catch(error => {
-            console.error('Error fetching data:', error);
-        });
-
-        // Check for query parameter 'collection'
-        const urlParams = new URLSearchParams(window.location.search);
-        const collectionName = urlParams.get('collection');
-        if (collectionName) {
-            const collectionsTitle      = document.getElementById('collection_title');
-            collectionsTitle.innerText  = collectionName;
-            fetchData(collectionName);
-        } else {
-            const placeholder = document.getElementById('placeholder');
-            placeholder.innerHTML = '';
-        }
-    </script>    
 {{end}}
 
