--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -4,10 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>QuadDB - {{.title}}</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="/assets/css/main.css">
+
+        <script src="/assets/js/toast.js"></script>
         <!-- Defer main script for loading -->
         <script src="/assets/js/dashboard.js" defer></script>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
         <div class="flex overflow-hidden h-screen text-sm text-white bg-main">
