push updated api, temp files for logins

--- a/dashboard/templates/pages/home.html
+++ b/dashboard/templates/pages/home.html
@@ -1,6 +1,49 @@
 <!-- pages/home.html -->
 
 {{define "content"}}
+<div class="flex overflow-hidden h-screen text-sm text-white bg-main">
+    <div class="hidden flex-col flex-shrink-0 w-20 border-r bg-main border-main sm:flex">
+        <div class="flex justify-center items-center h-16 text-primary">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-boxes">
+                <path d="M2.97 12.92A2 2 0 0 0 2 14.63v3.24a2 2 0 0 0 .97 1.71l3 1.8a2 2 0 0 0 2.06 0L12 19v-5.5l-5-3-4.03 2.42Z" />
+                <path d="m7 16.5-4.74-2.85" />
+                <path d="m7 16.5 5-3" />
+                <path d="M7 16.5v5.17" />
+                <path d="M12 13.5V19l3.97 2.38a2 2 0 0 0 2.06 0l3-1.8a2 2 0 0 0 .97-1.71v-3.24a2 2 0 0 0-.97-1.71L17 10.5l-5 3Z" />
+                <path d="m17 16.5-5-3" />
+                <path d="m17 16.5 4.74-2.85" />
+                <path d="M17 16.5v5.17" />
+                <path d="M7.97 4.42A2 2 0 0 0 7 6.13v4.37l5 3 5-3V6.13a2 2 0 0 0-.97-1.71l-3-1.8a2 2 0 0 0-2.06 0l-3 1.8Z" />
+                <path d="M12 8 7.26 5.15" />
+                <path d="m12 8 4.74-2.85" />
+                <path d="M12 13.5V8" />
+            </svg>
+        </div>
+        <div class="flex flex-col flex-grow mx-auto mt-4 space-y-4 text-gray-400">
+            <button class="flex justify-center items-center w-12 h-10 text-white rounded-md bg-secondary text-primary">
+                <svg viewBox="0 0 24 24" class="h-5" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                </svg>
+            </button>
+            <button class="flex justify-center items-center w-12 h-10 text-gray-500 rounded-md">
+                <svg viewBox="0 0 24 24" class="h-5" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
+                    <line x1="12" y1="11" x2="12" y2="17"></line>
+                    <line x1="9" y1="14" x2="15" y2="14"></line>
+                </svg>
+            </button>
+            <button class="flex justify-center items-center w-12 h-10 text-gray-500 rounded-md">
+                <svg viewBox="0 0 24 24" class="h-5" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <rect x="3" y="3" width="7" height="7"></rect>
+                    <rect x="14" y="3" width="7" height="7"></rect>
+                    <rect x="14" y="14" width="7" height="7"></rect>
+                    <rect x="3" y="14" width="7" height="7"></rect>
+                </svg>
+            </button>
+        </div>
+    </div>
+
     <div class="flex overflow-hidden flex-col flex-grow h-full">
         <div class="hidden px-10 w-full h-16 border-b lg:flex border-main">
             <div class="flex h-full text-gray-400">
@@ -153,4 +196,5 @@
             </div>
         </div>
     </div>
+</div>
 {{end}}
