update var names

--- a/dashboard/templates/pages/home.html
+++ b/dashboard/templates/pages/home.html
@@ -192,7 +192,7 @@
                     </button>
                 </div>
 
-                <div id="modalContent" class="mt-4 overflow-auto" style="max-height: calc(100vh - 150px);"></div>
+                <div id="collectionContent" class="mt-4 overflow-auto" style="max-height: calc(100vh - 150px);"></div>
             </div>
         </div>
     </div>
