--- a/dashboard/templates/pages/home.html
+++ b/dashboard/templates/pages/home.html
@@ -178,12 +178,12 @@
             <span class="material-icons sp-icon-close">keyboard_double_arrow_right</span>
         </button>
 
-        <div class="side-panel bg-secondary">
-            <div class="modal-content text-sm p-5 bg-main rounded-md w-full max-w-lg mx-auto overflow-auto"
+        <div class="side-panel bg-light">
+            <div class="modal-content text-sm p-5 bg-secondary rounded-md w-full max-w-lg mx-auto overflow-auto"
                 style="max-height: 90%;">
                 <div class="modal-header flex justify-between items-center">
                     <h2 class="text-xl font-bold" id="modalTitle">Document Details</h2>
-                    <button class="text-gray-500 hover:text-gray-700 focus:outline-none">
+                    <button class="text-gray-500 hover:text-gray-700 focus:outline-none bg-main">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round" class="w-6 h-6">
                             <line x1="18" y1="6" x2="6" y2="18"></line>
